removed time ids

--- a/index.html
+++ b/index.html
@@ -25,47 +25,47 @@
             <tbody>
                 <tr>
                     <td scope="row">9:00 AM</td>
-                    <td class="col" contenteditable="true" id="nine"></td>
+                    <td class="col" contenteditable="true"></td>
                     <td class="third align-middle"><i class="fas fa-save"></i></td>
                 </tr>
                 <tr>
                     <td scope="row">10:00 AM</td>
-                    <td contenteditable="true" id="ten"></td>
+                    <td contenteditable="true"></td>
                     <td class="third align-middle"><i class="fas fa-save"></i></td>
                 </tr>
                 <tr>
                     <td scope="row">11:00 AM</td>
-                    <td contenteditable="true" id="eleven"></td>
+                    <td contenteditable="true" i></td>
                     <td class="third align-middle"><i class="fas fa-save"></i></td>
                 </tr>
                 <tr>
                     <td scope="row">12:00 AM</td>
-                    <td contenteditable="true" id="twelve"></td>
+                    <td contenteditable="true" i></td>
                     <td class="third align-middle"><i class="fas fa-save"></i></td>
                 </tr>
                 <tr>
                     <td scope="row">1:00 PM</td>
-                    <td contenteditable="true" id="one"></td>
+                    <td contenteditable="true"></td>
                     <td class="third align-middle"><i class="fas fa-save"></i></td>
                 </tr>
                 <tr>
                     <td scope="row">2:00 PM</td>
-                    <td contenteditable="true" id="two"></td>
+                    <td contenteditable="true"></td>
                     <td class="third align-middle"><i class="fas fa-save"></i></td>
                 </tr>
                 <tr>
                     <td scope="row">3:00 PM</td>
-                    <td contenteditable="true" id="three"></td>
+                    <td contenteditable="true" ></td>
                     <td class="third align-middle"><i class="fas fa-save"></i></td>
                 </tr>
                 <tr>
                     <td scope="row">4:00 PM</td>
-                    <td contenteditable="true" id="four"></td>
+                    <td contenteditable="true"></td>
                     <td class="third align-middle"><i class="fas fa-save"></i></td>
                 </tr>
                 <tr>
                     <td scope="row">5:00 PM</td>
-                    <td contenteditable="true" id="five"></td>
+                    <td contenteditable="true"></td>
                     <td class="third align-middle"><i class="fas fa-save"></i></td>
                 </tr>
                 </tr>
