--- a/index.html
+++ b/index.html
@@ -24,48 +24,48 @@
         <table class="table">
             <tbody>
                 <tr>
-                    <td scope="row">9:00 AM</td>
-                    <td class="col" contenteditable="true"></td>
+                    <td scope="row" class="first">9:00 AM</td>
+                    <td class="col second" contenteditable="true"></td>
                     <td class="third align-middle"><i class="fas fa-save"></i></td>
                 </tr>
                 <tr>
-                    <td scope="row">10:00 AM</td>
-                    <td contenteditable="true"></td>
+                    <td scope="row" class="first">10:00 AM</td>
+                    <td contenteditable="true" class="second"/td>
                     <td class="third align-middle"><i class="fas fa-save"></i></td>
                 </tr>
                 <tr>
-                    <td scope="row">11:00 AM</td>
-                    <td contenteditable="true" i></td>
+                    <td scope="row" class="first">11:00 AM</td>
+                    <td contenteditable="true" class="second" i></td>
                     <td class="third align-middle"><i class="fas fa-save"></i></td>
                 </tr>
                 <tr>
-                    <td scope="row">12:00 AM</td>
-                    <td contenteditable="true" i></td>
+                    <td scope="row" class="first">12:00 AM</td>
+                    <td contenteditable="true" class="second" i></td>
                     <td class="third align-middle"><i class="fas fa-save"></i></td>
                 </tr>
                 <tr>
-                    <td scope="row">1:00 PM</td>
-                    <td contenteditable="true"></td>
+                    <td scope="row" class="first">1:00 PM</td>
+                    <td contenteditable="true" class="second"/td>
                     <td class="third align-middle"><i class="fas fa-save"></i></td>
                 </tr>
                 <tr>
-                    <td scope="row">2:00 PM</td>
-                    <td contenteditable="true"></td>
+                    <td scope="row" class="first">2:00 PM</td>
+                    <td contenteditable="true" class="second"/td>
                     <td class="third align-middle"><i class="fas fa-save"></i></td>
                 </tr>
                 <tr>
-                    <td scope="row">3:00 PM</td>
-                    <td contenteditable="true" ></td>
+                    <td scope="row" class="first">3:00 PM</td>
+                    <td contenteditable="true" class="second" ></td>
                     <td class="third align-middle"><i class="fas fa-save"></i></td>
                 </tr>
                 <tr>
-                    <td scope="row">4:00 PM</td>
-                    <td contenteditable="true"></td>
+                    <td scope="row" class="first">4:00 PM</td>
+                    <td contenteditable="true" class="second"/td>
                     <td class="third align-middle"><i class="fas fa-save"></i></td>
                 </tr>
                 <tr>
-                    <td scope="row">5:00 PM</td>
-                    <td contenteditable="true"></td>
+                    <td scope="row" class="first">5:00 PM</td>
+                    <td contenteditable="true" class="second"/td>
                     <td class="third align-middle"><i class="fas fa-save"></i></td>
                 </tr>
                 </tr>
