--- a/index.html
+++ b/index.html
@@ -24,50 +24,49 @@
         <table class="table">
             <tbody>
                 <tr id="a9">
-                    <td scope="row" class="first">9:00 AM</td>
+                    <td class="first">9:00 AM</td>
                     <td class="col second" contenteditable="true"></td>
                     <td class="third align-middle"><i class="fas fa-save"></i></td>
                 </tr>
                 <tr id="a10">
-                    <td scope="row" class="first">10:00 AM</td>
-                    <td contenteditable="true" class="second"/td>
+                    <td class="first">10:00 AM</td>
+                    <td contenteditable="true" class="second"></td>
                     <td class="third align-middle"><i class="fas fa-save"></i></td>
                 </tr>
                 <tr id="a11">
-                    <td scope="row" class="first">11:00 AM</td>
-                    <td contenteditable="true" class="second" i></td>
+                    <td class="first">11:00 AM</td>
+                    <td contenteditable="true" class="second"></td>
                     <td class="third align-middle"><i class="fas fa-save"></i></td>
                 </tr>
                 <tr id="p12">
-                    <td scope="row" class="first">12:00 PM</td>
-                    <td contenteditable="true" class="second" i></td>
+                    <td class="first">12:00 PM</td>
+                    <td contenteditable="true" class="second"></td>
                     <td class="third align-middle"><i class="fas fa-save"></i></td>
                 </tr>
                 <tr id="p13">
-                    <td scope="row" class="first">1:00 PM</td>
-                    <td contenteditable="true" class="second"/td>
+                    <td class="first">1:00 PM</td>
+                    <td contenteditable="true" class="second"></td>
                     <td class="third align-middle"><i class="fas fa-save"></i></td>
                 </tr>
                 <tr id="p14">
-                    <td scope="row" class="first">2:00 PM</td>
-                    <td contenteditable="true" class="second"/td>
+                    <td class="first">2:00 PM</td>
+                    <td contenteditable="true" class="second"></td>
                     <td class="third align-middle"><i class="fas fa-save"></i></td>
                 </tr>
                 <tr id="p15">
-                    <td scope="row" class="first">3:00 PM</td>
+                    <td class="first">3:00 PM</td>
                     <td contenteditable="true" class="second" ></td>
                     <td class="third align-middle"><i class="fas fa-save"></i></td>
                 </tr>
                 <tr id="p16">
-                    <td scope="row" class="first">4:00 PM</td>
-                    <td contenteditable="true" class="second"/td>
+                    <td class="first">4:00 PM</td>
+                    <td contenteditable="true" class="second"></td>
                     <td class="third align-middle"><i class="fas fa-save"></i></td>
                 </tr>
                 <tr id="p17">
-                    <td scope="row" class="first">5:00 PM</td>
-                    <td contenteditable="true" class="second"/td>
+                    <td class="first">5:00 PM</td>
+                    <td contenteditable="true" class="second"></td>
                     <td class="third align-middle"><i class="fas fa-save"></i></td>
-                </tr>
                 </tr>
             </tbody>
         </table>
